test/conformance/chainsaw/validate/clusterpolicy/standard/enforce-deprecated/block-pod-exec-requests/chainsaw-step-01-apply-1-3.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nginx
    exec: "false"
    tier: frontend
  name: nginx
  namespace: test-validate
spec:
  containers:
  - image: nginx
    name: nginx
