test/conformance/chainsaw/validate/clusterpolicy/standard/enforce-deprecated/block-pod-exec-requests/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Sample
    policies.kyverno.io/description: The 'exec' command may be used to gain shell
      access, or run other commands, in a Pod's container. While this can be useful
      for troubleshooting purposes, it could represent an attack vector and is discouraged.
      This policy blocks Pod exec commands to Pods having the label 'exec=false'.
    policies.kyverno.io/minversion: 1.4.2
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Block Pod Exec by Pod Label
  name: deny-exec-by-pod-label
spec:
  background: false
  rules:
  - context:
    - apiCall:
        jmesPath: metadata.labels.exec
        urlPath: /api/v1/namespaces/{{request.namespace}}/pods/{{request.name}}
      name: podexeclabel
    match:
      resources:
        kinds:
        - Pod/exec
    name: deny-exec-by-label
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: Equals
        value: CONNECT
    validate:
      deny:
        conditions:
          all:
          - key: '{{ podexeclabel }}'
            operator: Equals
            value: "false"
      message: Exec'ing into Pods protected with the label 'exec=false' is forbidden.
  validationFailureAction: Enforce
