test/conformance/chainsaw/validate/clusterpolicy/standard/enforce-deprecated/block-pod-exec-requests/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: block-pod-exec-requests
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: deny-exec-by-pod-label
  - name: step-01
    try:
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-3.yaml
  - name: step-02
    try:
    - script:
        content: kubectl -n test-validate exec nginx -it -- sh
        check:
          # The pod carries exec=false, so the exec must be rejected with the policy message.
          ($error != null): true
          (contains($stderr, 'Exec\'ing into Pods protected with the label \'exec=false\' is forbidden')): true
